--- a/src/app/signals/components/side-menu/side-menu.component.html
+++ b/src/app/signals/components/side-menu/side-menu.component.html
@@ -1,8 +1,11 @@
 <ul class="list-group">
-    <li *ngFor="let item of menuItems" 
-    class="list-group-item" 
-    [routerLink]="[item.route]" 
+  <li *ngFor="let item of menuItems()"
+    class="list-group-item"
+    [routerLink]="[ item.route ]"
     routerLinkActive="active">
-        {{ item.title }}
-    </li>
+    {{ item.title }}
+  </li>
+
 </ul>
+
+
