--- a/src/app/signals/layout/signals-layout/signals-layout.component.html
+++ b/src/app/signals/layout/signals-layout/signals-layout.component.html
@@ -1,11 +1,14 @@
 <div class="row mt-2">
-    <div class="col-2">
-        Menú
-        <hr>
-        <side-menu></side-menu>
-    </div>
-    <div class="col-10">
-        <p>Signals works</p>
-        <router-outlet></router-outlet>
-    </div>
+  <div class="col-2">
+    <h3>Menú</h3>
+    <hr>
+    <side-menu />
+  </div>
+
+  <div class="col-10">
+    <router-outlet />
+  </div>
+
 </div>
+
+
